[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Plinth.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/HanbokGirl.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ConstructionSign.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Nexus.gd" type="Script" id=4]
[ext_resource path="res://scenes/SceneTransitionFade.tscn" type="PackedScene" id=5]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 1029.51, 7.02032 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 1023.06, -3.20651 )
b = Vector2( -2.51562, -3.20648 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.8083, 403.017 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Plinth" parent="." instance=ExtResource( 1 )]
position = Vector2( -0.501709, -1.99661 )

[node name="StaticBody2D" type="StaticBody2D" parent="Plinth"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plinth/StaticBody2D"]
position = Vector2( 2.245, 554.556 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Plinth/StaticBody2D"]
position = Vector2( 7.55957, 806.349 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 514, 400 )

[node name="StaticBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 919.96, 600.821 )
scale = Vector2( 0.8, 0.8 )

[node name="HanbokGirl" parent="." instance=ExtResource( 2 )]
position = Vector2( 517.189, 683.729 )
scale = Vector2( 2, 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 20.9763, 400.048 )
shape = SubResource( 3 )

[node name="SceneTransitionFade" parent="." instance=ExtResource( 5 )]
margin_right = 1024.0
margin_bottom = 800.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
